--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Découvrez le portfolio de Nina Carducci, photographe passionnée par la capture de moments précieux. Services de shooting photo, retouches et albums personnalisés."
     />
-    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
+    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
