--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nina Carducci - Photographe</title>
-    <script>
+    <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Person",
