--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Person",
-        "name": "Nina Carducci",
+        "@type": "LocalBusiness",
+        "name": "Nina Carducci Photography",
         "url": "https://ninacarducci.github.io/",
         "sameAs": ["https://www.instagram.com/ninacarducci.photo/?hl=fr"],
         "image": "https://www.votre-site-web.com/images/photo-de-profil.jpg",
@@ -20,36 +20,6 @@
           "addressRegion": "Nouvelle Aquitaine",
           "postalCode": "33200",
           "addressCountry": "France"
-        },
-        "jobTitle": "Photographe professionnel",
-        "hasOccupation": {
-          "@type": "Occupation",
-          "name": "Photographe",
-          "occupationLocation": {
-            "@type": "City",
-            "name": "Ville",
-            "address": {
-              "@type": "PostalAddress",
-              "streetAddress": "68 avenue Alsace-Lorraine",
-              "addressLocality": "Bordeaux",
-              "addressRegion": "Nouvelle Aquitaine",
-              "postalCode": "33200",
-              "addressCountry": "France"
-            }
-          },
-          "estimatedSalary": {
-            "@type": "MonetaryAmountDistribution",
-            "currency": "EUR",
-            "minValue": 40000,
-            "maxValue": 60000,
-            "name": "Salaire estimé pour un photographe professionnel",
-            "duration": "P1Y",
-            "value": {
-              "@type": "QuantitativeValue",
-              "value": 50000,
-              "unitText": "EUR"
-            }
-          }
         },
         "makesOffer": [
           {
@@ -187,21 +157,21 @@
             <img
               src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg"
               class="d-block w-100"
-              alt="Slide 1"
+              alt="Homme qui traverse un passage piéton"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg"
               class="d-block w-100"
-              alt="Slide 2"
+              alt="Un moment de joie d'une foule à un concert"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg"
               class="d-block w-100"
-              alt="Slide 3"
+              alt="Une photo de mariage digne des plus beaux films"
             />
           </div>
         </div>
@@ -256,55 +226,55 @@
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
-            alt="Concert 1"
+            alt="Une prise de vue imprenable de l'arène"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
-            alt="Entreprise 1"
+            alt="Portrait d'un homme d'affaire"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
-            alt="Entreprise 2"
+            alt="Partage entre collègues"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
-            alt="Mariage 1"
+            alt="Un moment inoubliable au mariage de Ms and M.Smith"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
-            alt="Portrait 1"
+            alt="Un portrait pleine lumière"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
-            alt="Mariage 2"
+            alt="Prise de vue d'une cérémonie"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
-            alt="Portrait 2"
+            alt="L'émotion traverse l'image"
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
-            alt="Concert 2"
+            alt="Une prestation immortalisée pour toujours"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
-            alt="Entreprise 3"
+            alt="Photo d'une séance de télétravail au soleil"
           />
         </div>
       </div>
