--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </div>
     <div id="about">
       <div class="picture left">
-        <img src="./assets/images/nina.png" alt="Nina Carducci" />
+        <img src="./assets/images/nina.webp" alt="Nina Carducci" />
       </div>
       <div id="about-me">
         <h2 class="about-me__title">À propos de moi</h2>
@@ -261,7 +261,7 @@
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
+            src="./assets/images/gallery/portraits/nino-van-prattenburg - 443cl1uR_8-unsplash.webp"
             alt="L'émotion traverse l'image"
           />
           <img
@@ -372,7 +372,7 @@
           </form>
         </div>
         <div class="picture right">
-          <img src="./assets/images/camera.png" alt="Camera" />
+          <img src="./assets/images/camera.webp" alt="Camera" />
         </div>
       </div>
     </div>
