fix : accessiblité, aria label, balise header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,43 @@
       name="description"
       content="Découvrez le portfolio de Nina Carducci, photographe passionnée par la capture de moments précieux. Services de shooting photo, retouches et albums personnalisés."
     />
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="Nina Carducci - Photographe à Bordeaux"
+    />
+    <meta
+      property="og:description"
+      content="Découvrez le portfolio de Nina Carducci, photographe passionnée par la capture de moments précieux. Services de shooting photo, retouches et albums personnalisés."
+    />
+    <meta
+      property="og:url"
+      content="https://pierregourinat.github.io/Projet8_SEO_NinaCarducci/assets/images/nina.webp"
+    />
+    <meta
+      property="og:image"
+      content="https://pierregourinat.github.io/Projet8_SEO_NinaCarducci/assets/images/nina.webp"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="fr_FR" />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@NinaCarducci" />
+    <meta name="twitter:creator" content="@NinaCarducci" />
+    <meta
+      name="twitter:title"
+      content="Nina Carducci - Photographe à Bordeaux"
+    />
+    <meta
+      name="twitter:description"
+      content="Découvrez le portfolio de Nina Carducci, photographe passionnée par la capture de moments précieux. Services de shooting photo, retouches et albums personnalisés."
+    />
+    <meta
+      name="twitter:image"
+      content="https://pierregourinat.github.io/Projet8_SEO_NinaCarducci/assets/images/nina.webp"
+    />
+
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -124,7 +161,7 @@
         </ul>
       </div>
     </div>
-    <div id="header">
+    <header id="header">
       <div
         id="carouselExampleIndicators"
         class="carousel slide"
@@ -180,21 +217,21 @@
           type="button"
           data-bs-target="#carouselExampleIndicators"
           data-bs-slide="prev"
+          aria-label="Previous"
         >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
         </button>
         <button
           class="carousel-control-next"
           type="button"
           data-bs-target="#carouselExampleIndicators"
           data-bs-slide="next"
+          aria-label="Next"
         >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
         </button>
       </div>
-    </div>
+    </header>
     <div id="about">
       <div class="picture left">
         <img src="./assets/images/nina.webp" alt="Nina Carducci" />
@@ -262,7 +299,7 @@
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/nino-van-prattenburg - 443cl1uR_8-unsplash.webp"
-            alt="L'émotion traverse l'image"
+            alt="L'émotion traverse l'image de cette photographie en extérieur"
           />
           <img
             data-gallery-tag="Concert"
