fix : defer css

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       content="https://pierregourinat.github.io/Projet8_SEO_NinaCarducci/assets/images/nina.webp"
     />
 
-    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" defer />
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
