fix : optimisation html

--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
     />
     <meta
       property="og:description"
-      content="Découvrez le portfolio de Nina Carducci, photographe passionnée par la capture de moments précieux. Services de shooting photo, retouches et albums personnalisés."
+      content="Découvrez le portfolio de Nina Carducci, photographe basée à Bordeaux, passionnée par la capture de moments précieux. Services de shooting photo, retouches et albums personnalisés."
     />
     <meta
       property="og:url"
-      content="https://pierregourinat.github.io/Projet8_SEO_NinaCarducci/assets/images/nina.webp"
+      content="https://pierregourinat.github.io/Projet8_SEO_NinaCarducci/"
     />
     <meta
       property="og:image"
       content="https://pierregourinat.github.io/Projet8_SEO_NinaCarducci/assets/images/nina.webp"
+      property="og:image:alt"
+      content="Nina Carducci"
     />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_FR" />
@@ -37,7 +39,7 @@
     />
     <meta
       name="twitter:description"
-      content="Découvrez le portfolio de Nina Carducci, photographe passionnée par la capture de moments précieux. Services de shooting photo, retouches et albums personnalisés."
+      content="Découvrez le portfolio de Nina Carducci, photographe basée à Bordeaux, passionnée par la capture de moments précieux. Services de shooting photo, retouches et albums personnalisés."
     />
     <meta
       name="twitter:image"
